@@ -1,0 +1,56 @@
+This work was packaged for Debian by:
+
+    PCManX Development Group <pcmanx@googlegroups.com> on Tue, 26 Oct 2010 05:33:19 +0800
+
+It was downloaded from:
+
+    http://code.google.com/p/pcmanx-gtk2/
+
+Upstream Author(s):
+
+    PCMan <pcman.tw@gmail.com>
+    Jim Huang <jserv.tw@gmail.com>
+    Kanru Chen <koster@debian.org.tw>
+    Shih-yuan Lee <fourdollars@gmail.com>
+    Chia I Wu <b90201047@ntu.edu.tw>
+    Youchen Lee <youchen.lee@gmail.com>
+    Emfox Zhou <emfoxzhou@gmail.com>
+    Jason Xia <jasonxh@gmail.com>
+    Neversay <neversay.misher@gmail.com>
+    Chen Yung Chou <scsichen@gmail.com>
+    Pav Lucistnik <pav@FreeBSD.org>
+    Chih-Min Chao <cmchao@gmail.com>
+    Darren Hoo <darren.hoo@gmail.com>
+    Halton Huo <halton.huo@sun.com>
+
+Copyright:
+
+    Copyright (C) 2005 PCMan <pcman.tw@gmail.com>
+
+License:
+
+    This package is free software; you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation; either version 2 of the License, or
+    (at your option) any later version.
+
+    This package is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this package; if not, write to the Free Software
+    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
+
+On Debian systems, the complete text of the GNU General
+Public License version 2 can be found in `/usr/share/common-licenses/GPL-2'.
+
+The Debian packaging is:
+
+    Copyright (C) 2010 PCManX Development Group <pcmanx@googlegroups.com>
+
+you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.
