@@ -1,0 +1,1 @@
+usr/lib/libpcmanx_core*.so.*
